# game-of-life-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile  README.md
ci/: Dockerfile  build.sh  install.sh  script.sh  script_docker.sh
docs/: game-of-life-rs.js  game_of_life_rs-2c07e78c5018cd19.js.mem  game_of_life_rs-6974e9fb9bc857ae.js  game_of_life_rs-86b688b9ea5a437c.js.mem  game_of_life_rs-94f4adb361d2e035.js.mem  game_of_life_rs-a0abefe0ff05557b.js.mem
src/: app.rs  board.rs  main.rs
srv/: index.html
