[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Conway's Game of Life implementations for Native/Emscripten"
license = "MIT OR Apache-2.0"
name = "game-of-life-rs"
readme = "README.md"
repository = "https://github.com/gifnksm/game-of-life-rs"
version = "0.1.0"

[dependencies]
board-game-geom = "0.2"
image = "0.12"
piston = "0.31"
piston2d-graphics = "0.21"
piston2d-opengl_graphics = "0.40"
pistoncore-sdl2_window = "0.40"
rand = "0.3"
time = "0.1"

[target.'cfg(target_os = "emscripten")'.dependencies]
libc = "0.2.17"
