[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Conway's Game of Life implementations for Native/Emscripten"
license = "MIT/Apache-2.0"
name = "game-of-life-rs"
readme = "README.md"
repository = "https://github.com/gifnksm/game-of-life-rs"
version = "0.1.0"

[dependencies]
board-game-geom = "0.2"
image = "0.15"
piston = "0.32"
piston2d-graphics = "0.21"
piston2d-opengl_graphics = "0.46"
pistoncore-sdl2_window = "0.43"
rand = "0.3"
time = "0.1"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.3"

